test_case/Rust-GCC_gccrs/1718_1372324913.rs

../gcc/testsuite/rust/compile/bad_type1.rs:2:5: error: expected 'bool' got '<integer>'
    2 |     let logical: bool = 123; // { dg-error "expected .bool. got .<integer>." }
      |     ^~~          ~~~~   ~~~

